plugins {
	id 'java'
	id 'idea'
	id 'org.springframework.boot' version '3.2.0'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.sigursoft'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

repositories {
	mavenCentral()
}

dependencies {
	// API
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	// Tests
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
    // JUnit 5
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // Mockito
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'
    // Wiremock
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.wiremock.integrations.testcontainers:wiremock-testcontainers-module:1.0-alpha-13'
}

test {
    jvmArgs = ['-Xshare:off', '-XX:+EnableDynamicAgentLoading']
    useJUnitPlatform()
	testLogging.events "passed", "skipped", "failed"
}
